--- a/src/scss/themes/theme-dark.scss
+++ b/src/scss/themes/theme-dark.scss
@@ -104,4 +104,24 @@ body[data-theme="dark"] {
    .close-icon {
       color: white;
    }
+
+   #skills {
+      background: black;
+   }
+
+   footer {
+      background: black;
+   }
+
+   .title-container {
+      color: white;
+   }
+
+   .nav-link {
+      color: gray
+   }
+
+   .nav-link:hover {
+      color: darkgrey
+   }
 }
