--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import '/src/scss/themes/theme-light.scss';
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
 
+
 html {
 	font-size: 62.5%;
 	-webkit-font-smoothing: antialiased;
@@ -17,6 +18,7 @@ html {
 
 .title-container {
 	height: 50px;
+	color: #ebeaf5
 }
 
 .title-styles {
@@ -27,6 +29,7 @@ html {
 .header-icon {
 	height: 150px;
 	width: 150px;
+	color: #0A1C26;
 }
 
 header {
@@ -38,7 +41,6 @@ header {
 	-webkit-background-size: cover;
 	text-align: center;
 	overflow: hidden;
-	background-color: #e9d5a1;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -70,9 +72,9 @@ header .nav {
 	padding: 8px 15px 2px 15px;
 	position: relative;
 	z-index: -500;
-	border-top: 5px solid #696969;
+	border-top: 5px solid #2E4559;
 	border-radius: 0 0 5px 5px;
-	background-color: #696969;
+	background-color: #2E4559;
 	color: white;
 }
 
@@ -86,7 +88,7 @@ header .nav {
 
 .language {
 	font-size: 25px;
-	background-color: #e9d5a1;
+	background-color: #2E4559;
 	padding-bottom: 10px;
 	padding-top: 80px;
 }
@@ -95,18 +97,18 @@ header h1 {
 	font-size: 400%;
 	text-align: center;
 	font-weight: 600 !important;
-	color: #353239;
+	color: #ebeaf5;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	margin: 0 auto 18px auto;
 	width: 100%;
 }
 
 .slider-image {
-	border: 5px solid #D7CAAA;
+	border: 5px solid #8FCBD9;
 }
 
 .slider-tab {
-	background-color: #D7CAAA;
+	background-color: #8FCBD9;
 	height: 25px;
 }
 
@@ -120,7 +122,7 @@ header h1 {
 }
 
 #about {
-	background: #fff;
+	background: #8FCBD9;
 	overflow: hidden;
 }
 
@@ -129,7 +131,7 @@ header h1 {
 	font: 18px/24px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
-	color: black;
+	color: #0A1C26;
 	text-align: center;
 }
 
@@ -178,13 +180,13 @@ header h1 {
 	font: 18px/24px 'opensans-bold', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 3px;
-	color: black;
+	color: #0A1C26;
 	text-align: center;
 }
 
 .polaroid img {
 	display: block;
-	max-width: 200px;
+	max-width: 30rem;
 }
 
 .polaroid span {
@@ -205,7 +207,7 @@ header h1 {
 }
 
 .link-href {
-	color: black;
+	color: #0A1C26;
 }
 
 .wave {
@@ -231,7 +233,7 @@ header h1 {
 }
 
 #resume {
-	background: #efe1bd;
+	background: #1F8DA6;
 }
 
 .experience-icon {
@@ -245,7 +247,7 @@ header h1 {
 	text-align: left !important;
 	padding: 5px 8px 5px 8px !important;
 	vertical-align: baseline;
-	background-color: #AE944F !important;
+	background-color: #144E73 !important;
 	color: white;
 	font-weight: lighter !important;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -257,7 +259,7 @@ header h1 {
 	padding: 5px 8px 5px 8px !important;
 	vertical-align: baseline;
 	background-color: #f9f5e9 !important;
-	color: black;
+	color: #0A1C26;
 	font-weight: lighter !important;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -329,7 +331,7 @@ header h1 {
 }
 
 .close-icon {
-	color: black;
+	color: #0A1C26;
 	font-weight: lighter !important;
 }
 
@@ -349,11 +351,11 @@ header h1 {
 }
 
 .loader-bar-color {
-	color: black !important;
+	color: #0A1C26 !important;
 }
 
 #portfolio {
-	background: #efe1bd;
+	background: #8FCBD9;
 	padding-bottom: 5%;
 }
 
@@ -389,7 +391,7 @@ header h1 {
 }
 
 #skills {
-	background: #1F1F1F;
+	background: #144E73;
 	min-height: 200px;
 	width: 100%;
 	overflow: hidden;
@@ -414,7 +416,7 @@ header h1 {
 }
 
 footer {
-	background: #1F1F1F;
+	background: #2E4559;
 	min-height: 100px;
 	width: 100%;
 	overflow: hidden;
